--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,211 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@techreport{arnoldIntroductionAppalachianHealth2022,
+  title = {Introduction to {{Appalachian Health}}},
+  author = {Arnold, Tiffany G and Ed, M},
+  year = {2022},
+  langid = {english},
+  file = {/Users/shelbylevel/Zotero/storage/62EA76IW/Arnold and Ed - INTRODUCTION TO APPALACHIAN HEALTH.pdf}
 }
 
+@misc{centersfordiseasecontrolandpreventioncdcMultipleCauseDeath,
+  title = {Multiple {{Cause}} of {{Death}} ({{Provisional}})},
+  author = {{Centers for Disease Control {and} Prevention (CDC)}},
+  publisher = {{CDC WONDER}}
+}
 
+@article{dewittRuralSNAPParticipants2020,
+  title = {Rural {{SNAP Participants}} and {{Food Insecurity}}: {{How Can Communities Leverage Resources}} to {{Meet}} the {{Growing Food Insecurity Status}} of {{Rural}} and {{Low-Income}}  {{Residents}}?},
+  author = {DeWitt, Emily and Gillespie, Rachel and {Norman-Burgdolf}, Heather and Cardarelli, Kathryn M. and Slone, Stacey and Gustafson, Alison},
+  year = {2020},
+  month = aug,
+  journal = {International journal of environmental research and public health},
+  volume = {17},
+  number = {17},
+  address = {{Switzerland}},
+  issn = {1660-4601 1661-7827},
+  doi = {10.3390/ijerph17176037},
+  abstract = {The burden of obesity disproportionately influences poor health outcomes in rural communities in the United States. Various social and environmental factors  contribute to inadequate food access and availability in rural areas, influencing  dietary intakes and food insecurity rates. This study aims to identify patterns  related to food insecurity and fruit and vegetable consumption within a  SNAP-eligible and low-income, highly obese rural Appalachian community. A  prospective cohort was implemented to identify gaps in resources addressing  obesity and food insecurity challenges. SAS 9.4 software was used to examine  differences in dietary intakes and shopping practices among SNAP participants.  Among participants (n = 152), most reported an annual household income less than  USD 20,000 (n = 90, 60.4\%), 29.1\% reported food insecurity, and 39.5\% reported  receiving SNAP benefits within the last month. The overall mean FV intake was  3.46 daily servings (95\% CI: 3.06-3.91) among all participants. SNAP  participation was associated with food insecurity (p = 0.007) and those  participating in SNAP were two times more likely to report being food insecure  (OR = 2.707, 95\% CI: 1.317, 5.563), relative to non-participants. These findings  further depict the need for intervention, as the burden of food insecurity  persists. Tailoring health-promoting initiatives to consider rurality and SNAP  participation is vital for sustainable success among these populations.},
+  langid = {english},
+  pmcid = {PMC7504289},
+  pmid = {32825144},
+  keywords = {*Food Assistance,*Food Insecurity,*Rural Population,Adult,Aged,{Aged, 80 and over},Cross-Sectional Studies,Diet,Female,food access,food insecurity,Food Supply,Health Services Needs and Demand,Humans,Income,Male,Middle Aged,Poverty,Prospective Studies,Residence Characteristics,rural,United States,Young Adult}
+}
+
+@misc{Diabetes2023,
+  title = {Diabetes},
+  year = {2023},
+  month = feb,
+  journal = {Cleveland Clinic},
+  urldate = {2023-10-02},
+  abstract = {Learn about all the different kinds of diabetes and the basics of this condition.},
+  howpublished = {https://my.clevelandclinic.org/health/diseases/7104-diabetes},
+  langid = {english}
+}
+
+@techreport{heffernanAppalachianDiseasesofDespairUpdateJuly2023Pdf2023,
+  title = {Appalachian-{{Diseases-of-Despair-Update-July-2023}}.Pdf},
+  author = {Heffernan, Megan and Papanikolaou, Malina and Meit, Michael},
+  year = {2023},
+  month = jul,
+  institution = {{Appalachian Regional Commission; NORC at the University of Chicago; East Tennessee State University}},
+  urldate = {2023-12-21},
+  abstract = {This study analyzes the impact of diseases of despair on mortality within the Appalachian Region, focusing on mortality from three main causes: alcohol, prescription drug, and illegal drug overdose; suicide; and alcoholic liver disease/cirrhosis of the liver. It includes data through 2021 and serves as an update to previous ARC reports exploring the same issues.},
+  file = {/Users/shelbylevel/Zotero/storage/6CZGD8XN/Appalachian-Diseases-of-Despair-Update-July-2023.pdf}
+}
+
+@techreport{kerrickFoodInsecurityAppalachia2023,
+  title = {Food {{Insecurity}} in the {{Appalachia Region}}},
+  author = {Kerrick, Ben and Bramhall, Clare and De Corte, Brian and Lichty, Matthew and Hostetler, Erin and Halili, Gabo and Kaskaviqi, Kerol},
+  year = {2023},
+  month = nov,
+  institution = {{Appalachian Regional Commission; Karen Karp \& Partners (KK\&P)}},
+  urldate = {2023-12-21},
+  abstract = {This report provides a comprehensive assessment of food insecurity dynamics in Appalachia{\textemdash}primarily through analysis of datasets from Feeding America, the American Community Survey (ACS), and the U.S. Department of Agriculture (USDA). It highlights the realities, risks, and opportunities related to food insecurity in the region. The report also offers case studies of a range of innovative responses to food insecurity from across the Appalachian Region. Each case study summarizes the context, rationale, and key elements of the initiative, while also providing relevant takeaways and lessons learned to inform stakeholders in other regions that may want to replicate or adapt these approaches.},
+  file = {/Users/shelbylevel/Zotero/storage/AIKZ5RZ9/Food-Insecurity-in-Appalachia-Report.pdf}
+}
+
+@misc{MultipleCauseDeath,
+  title = {Multiple {{Cause}} of {{Death Data}}},
+  journal = {National Center for Health Statistics Mortality Data on CDC WONDER},
+  urldate = {2023-10-02},
+  howpublished = {https://wonder.cdc.gov/mcd.html},
+  file = {/Users/shelbylevel/Zotero/storage/MEKWHGP2/mcd.html}
+}
+
+@misc{MultipleCauseDeatha,
+  title = {Multiple {{Cause}} of {{Death Data}} on {{CDC WONDER}}},
+  publisher = {{Centers for Disease Control and Prevention Nation Center for Health Statistics}}
+}
+
+@misc{OhioAlliancePopulation2024,
+  title = {The {{Ohio Alliance}} for {{Population Health}}},
+  year = {2024},
+  journal = {Ohio University},
+  howpublished = {https://www.ohio.edu/chsp/alliance}
+}
+
+@article{pebesmaSimpleFeaturesStandardized2018,
+  title = {Simple Features for {{R}}: {{Standardized}} Support for Spatial Vector Data},
+  author = {Pebesma, Edzer},
+  year = {2018},
+  journal = {The R Journal},
+  volume = {10},
+  number = {1},
+  pages = {439--446},
+  doi = {10.32614/RJ-2018-009}
+}
+
+@article{pebesmaSimpleFeaturesStandardized2018a,
+  title = {Simple Features for {{R}}: {{Standardized}} Support for Spatial Vector Data},
+  author = {Pebesma, Edzer},
+  year = {2018},
+  journal = {The R Journal},
+  volume = {10},
+  number = {1},
+  pages = {439--446},
+  doi = {10.32614/RJ-2018-009}
+}
+
+@book{pebesmaSpatialDataScience2023,
+  title = {Spatial Data Science: {{With}} Applications in {{R}}},
+  author = {Pebesma, Edzer and Bivand, Roger},
+  year = {2023},
+  publisher = {{Chapman and Hall/CRC}},
+  doi = {10.1201/9780429459016}
+}
+
+@techreport{positteamRStudioIntegratedDevelopment2023,
+  title = {{{RStudio}}: {{Integrated}} Development Environment for {{R}}},
+  author = {{Posit team}},
+  year = {2023},
+  address = {{Boston, MA}},
+  institution = {{Posit Software, PBC}}
+}
+
+@manual{positteamRStudioIntegratedDevelopment2024a,
+  type = {Manual},
+  title = {{{RStudio}}: {{Integrated}} Development Environment for {{R}}},
+  author = {{Posit team}},
+  year = {2024},
+  address = {{Boston, MA}},
+  institution = {{Posit Software, PBC}}
+}
+
+@techreport{rcoreteamLanguageEnvironmentStatistical2023,
+  title = {R: {{A}} Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  year = {2023},
+  address = {{Vienna, Austria}},
+  institution = {{R Foundation for Statistical Computing}}
+}
+
+@manual{rcoreteamLanguageEnvironmentStatistical2023a,
+  type = {Manual},
+  title = {R: {{A}} Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  year = {2023},
+  address = {{Vienna, Austria}},
+  institution = {{R Foundation for Statistical Computing}}
+}
+
+@techreport{walkerTidycensusLoadUS2023,
+  title = {Tidycensus: {{Load US}} Census Boundary and Attribute Data as 'tidyverse' and 'Sf'-{{Ready}} Data Frames},
+  author = {Walker, Kyle and Herman, Matt},
+  year = {2023}
+}
+
+@manual{walkerTidycensusLoadUS2024,
+  type = {Manual},
+  title = {Tidycensus: {{Load US}} Census Boundary and Attribute Data as 'tidyverse' and 'Sf'-{{Ready}} Data Frames},
+  author = {Walker, Kyle and Herman, Matt},
+  year = {2024}
+}
+
+@misc{WhatDiabetes2023,
+  title = {What Is {{Diabetes}}?},
+  year = {2023},
+  month = sep,
+  journal = {Centers for Disease Control and Prevention},
+  urldate = {2023-10-02},
+  abstract = {If you have diabetes, your body either doesn't make enough insulin or can't use it as well as it should. Find out about the different diabetes types.},
+  howpublished = {https://www.cdc.gov/diabetes/basics/diabetes.html},
+  langid = {american},
+  file = {/Users/shelbylevel/Zotero/storage/UK5C4CGW/diabetes.html}
+}
+
+@book{wickhamGgplot2ElegantGraphics2016,
+  title = {Ggplot2: {{Elegant}} Graphics for Data Analysis},
+  author = {Wickham, Hadley},
+  year = {2016},
+  publisher = {{Springer-Verlag New York}},
+  isbn = {978-3-319-24277-4}
+}
+
+@book{wickhamGgplot2ElegantGraphics2016a,
+  title = {Ggplot2: {{Elegant}} Graphics for Data Analysis},
+  author = {Wickham, Hadley},
+  year = {2016},
+  publisher = {{Springer-Verlag New York}},
+  isbn = {978-3-319-24277-4}
+}
+
+@article{wickhamWelcomeTidyverse2019,
+  title = {Welcome to the {{tidyverse}}},
+  author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy D'Agostino and Fran{\c c}ois, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and M{\"u}ller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686}
+}
+
+@article{wickhamWelcomeTidyverse2019a,
+  title = {Welcome to the \{tidyverse\}},
+  author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy D'Agostino and Fran{\c c}ois, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and M{\"u}ller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686}
+}
