--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,3 @@
 # Preface {.unnumbered}
 
-This is a Quarto book.
-
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
-
-```{r}
-1 + 1
-```
+This is a brief guide to using Quarto and Zotero with RStudio!
