--- a/word-example.qmd
+++ b/word-example.qmd
@@ -33,3 +33,7 @@ In the [Document Templates](https://catmailohio.sharepoint.com/:f:/s/CHSP-OAIPH/
 
 1.  Download the file `oaph-reference-doc.docx`
 2.  Download the file `word-template.qmd` (to the same location/folder on your computer as the file above) and follow the instructions.
+
+## More Information
+
+[HERE](https://quarto.org/docs/output-formats/ms-word.html) are even more examples of what you can do with a Word document!
