--- a/html-example.qmd
+++ b/html-example.qmd
@@ -28,7 +28,7 @@ engine: knitr
 
 ## Create Your Own
 
-In the [Document Templates](https://catmailohio.sharepoint.com/:f:/s/CHSP-OAIPH/ElBBCzi3jYxBu7QteV9B0F8BtM5yBr6-VQbXafZsS3wQ0Q?e=Q7INHc) folder download the file `html-template.qmd` and follow the instructions.
+In the [Document Templates](https://catmailohio.sharepoint.com/:f:/s/CHSP-OAIPH/ElBBCzi3jYxBu7QteV9B0F8B_Y5Zj525ZbtHao5rAr0Rrw?e=bu87Q1) folder download the file `html-template.qmd` and follow the instructions.
 
 ## More Information
 
