--- a/ppt-example.qmd
+++ b/ppt-example.qmd
@@ -1,6 +1,6 @@
 # PowerPoint Slides
 
-Click [HERE](https://catmailohio.sharepoint.com/:u:/s/CHSP-OAIPH/EcHNaRfELrNNlw_G663PFE8BpxgjXU1rTNAYI8yxDPzi9Q?e=bTx2Wd) for an example PowerPoint presentation.
+Click [HERE](https://catmailohio.sharepoint.com/:p:/s/CHSP-OAIPH/EbmyP13wGChPgQtP_RJBcWUBT1vzuYRY5tRs0ITDyJ5dRg?e=kRzn2n) for an example PowerPoint presentation.
 
 ## Example YAML Statement
 
@@ -9,24 +9,24 @@ Click [HERE](https://catmailohio.sharepoint.com/:u:/s/CHSP-OAIPH/EcHNaRfELrNNlw_
 ---
 title: "Title of Document"
 subtitle: "Subtitle of Document"
-author: "Ohio Alliance for Population Health <br> Your Name"
+author: 'Prepared by Ohio Alliance for Population Health'
+date: "`r format(Sys.time(), '%B %d, %Y')`"
 format: 
-  revealjs:
-    logo: 'oaph-logo.png'
+  pptx:
+    logo: 'slide-theme/oaph-logo.png'
     footer: '[www.ohio.edu/chsp/alliance](https://www.ohio.edu/chsp/alliance)'
-    css: oaph-theme.css
-bibliography: "references.bib"
-csl: "APA Numeric Superscript Style.csl"
+    reference-doc: oaph-reference-doc.pptx  #file comes from OneDrive folder
+bibliography: references.bib  #will be created by your Zotero collection
+csl: APA Numeric Superscript Style.csl  #change based on your doc
+engine: knitr
 ---
 
 ```
 
 ## Create Your Own
 
-In the [Document Templates](https://catmailohio.sharepoint.com/:f:/s/CHSP-OAIPH/ElBBCzi3jYxBu7QteV9B0F8BtM5yBr6-VQbXafZsS3wQ0Q?e=Q7INHc) folder:
-
-1.  Download the file `oaph-reference-doc.pptx`
-2.  Download the file `ppt-template.qmd` (to the same location/folder on your computer as the file above) and follow the instructions.
+1.  In the [Document Templates](https://catmailohio.sharepoint.com/:f:/s/CHSP-OAIPH/ElBBCzi3jYxBu7QteV9B0F8B_Y5Zj525ZbtHao5rAr0Rrw?e=bu87Q1) folder download the file `ppt-template.qmd`
+2.  In the [Branding Itmes](https://catmailohio.sharepoint.com/:f:/s/CHSP-OAIPH/EmO0szNa2BhPho1a1QuiM4IB4mcPiym2duQfqrWw6Bc1Xg?e=21ifa7) download the file `oaph-reference-doc.pptx` (to the same location/folder on your computer as the file above) and follow the instructions.
 
 ## More Information
 
